src/objects/Project_Month__c.object
<CustomObject>
    <description>Allows data from Projects to be summarised by and the duration of a Project to be plotted in graphs</description>
    <fields>
        <fullName>Month__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Value__c</fullName>
        <label>Project Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Project Months</relationshipLabel>
        <relationshipName>Project_Months</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Month</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Months</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>